--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <h3 class="nav-title">G3 Architects</h3>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact Us</li>
+                <li>log in</li>
+            </ul>
+        </nav>
+        <div class="bannar">
+            <div class="bannar-content">
+                <h1 class="bannar-title">Brand New Group of Architects</h1>
+                <p class="bannar-des">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have
+                    suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="">
+        </div>
+    </header>
+    <main>
+        <section class="team-container">
+            <div class="team-img-contailer">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="team-content">
+                <h3 class="team-title"><span class="quick">Quick list</span> <span class="our">of Our</span> <span class="feature">Features</span></h3>
+                <p class="team-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore me</button>
+            </div>
+        </section>
+    </main>
+    <footer></footer>
 </body>
+
 </html>
