--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
             <ul>
                 <li>Home</li>
                 <li>About</li>
@@ -22,7 +22,8 @@
         <div class="bannar">
             <div class="bannar-content">
                 <h1 class="bannar-title">Brand New Group of Architects</h1>
-                <p class="bannar-des">There are many variations of passages of Lorem Ipsum available, but the majority
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority
                     have
                     suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
@@ -39,10 +40,59 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="team-content">
-                <h3 class="team-title"><span class="quick">Quick list</span> <span class="our">of Our</span> <span class="feature">Features</span></h3>
-                <p class="team-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h3 class="team-title"><span class="quick text-light-gray">Quick list</span> <span class="our">of
+                        Our</span> <span class="feature">Features</span></h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="btn-primary">Explore me</button>
             </div>
+        </section>
+
+        <section class="features">
+
+        </section>
+
+        <section class="facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered
+                alteration.</p>
+            <div class="card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title text-light-gray">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title text-light-gray">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title text-light-gray">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title text-light-gray">Email Send</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="sponsors">
+            <h3 class="section-title">Our Sponspors</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration.</p>
+                <div class="sposors-img">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/google.png" alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
+                </div>
         </section>
     </main>
     <footer></footer>
