--- a/index.html
+++ b/index.html
@@ -50,7 +50,41 @@
         </section>
 
         <section class="features">
-
+            <div class="feature-content">
+                <h3 class="section-title title-style">
+                    Features you will <br> love & enjoy
+                </h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Drag & Drop Builder</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Awesome Modern Design</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Awesome Modern Design</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="feature-img">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h4 class="ten">10+ years</h4>
+                    <p class="ex">Experience</p>
+                </div>
+            </div>
         </section>
 
         <section class="facts">
@@ -84,15 +118,16 @@
 
         <section class="sponsors">
             <h3 class="section-title">Our Sponspors</h3>
-            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered
                 alteration.</p>
-                <div class="sposors-img">
-                    <img src="images/sponsors/spotify.png" alt="">
-                    <img src="images/sponsors/amazon.png" alt="">
-                    <img src="images/sponsors/google.png" alt="">
-                    <img src="images/sponsors/telerama.png" alt="">
-                    <img src="images/sponsors/figma.png" alt="">
-                </div>
+            <div class="sposors-img">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
         </section>
     </main>
     <footer></footer>
